--- a/taskmanager/src/main/resources/application.properties
+++ b/taskmanager/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-api.security.token.secret=secret-key
+api.security.token.secret=secretKey
 api.security.token.expiration-hours=1
 api.security.token.timezone=-03:00
