--- a/taskmanager/pom.xml
+++ b/taskmanager/pom.xml
@@ -77,6 +77,17 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
 		</dependency>
+		
+		<dependency>
+       <groupId>org.xerial</groupId>
+       <artifactId>sqlite-jdbc</artifactId>
+       <version>3.34.0</version>
+   </dependency>
+
+   <dependency>
+    	<groupId>org.hibernate.orm</groupId>
+    	<artifactId>hibernate-community-dialects</artifactId>
+   </dependency>
 
 	</dependencies>
 
