--- a/taskmanager/src/main/resources/application.properties
+++ b/taskmanager/src/main/resources/application.properties
@@ -1,13 +1,20 @@
 spring.application.name=taskmanager
 
 #H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#SQLite
+spring.datasource.url=jdbc:sqlite:target/db/taskmanager.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
 
 api.security.token.secret=secretKey
 api.security.token.expiration-hours=1
