fix(config): adjust SQLite database configuration to resolve initialization error

--- a/taskmanager/src/main/resources/application.properties
+++ b/taskmanager/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.application.name=taskmanager
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #SQLite
-spring.datasource.url=jdbc:sqlite:target/db/taskmanager.db
+spring.datasource.url=jdbc:sqlite:data/taskmanager.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
